fixes collapse button

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -2,7 +2,7 @@
     height: 90% !important;
 }
 
-.code-editorfull{
+.code-editor-full{
     width: 33.3%;
     padding-left: 1.5%;
     padding-right: 1.2%;
@@ -12,22 +12,29 @@
     padding-bottom: 0.5em;
 }
 
-.code-editorcollapse{
+.code-editor-collapse{
     width: 10%;
+    padding-left: 1.5%;
+    padding-right: 1.2%;
+    overflow: hidden;
+    position: relative;
+    background-color: rgb(83, 81, 81);
+    padding-bottom: 0.5em;
 }
 .code-header{
     height: 30px;
     content: attr(title);
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
-    padding-left: 20px;
+    padding-right: 20px;
     font-size: 18px;
     color: rgb(248, 246, 246);
     background-color: rgb(8, 8, 8);
 }
 
 .collapse-button{
-    margin-left: 40%;
+    margin-right:80%;
 }
 
 .editor-box{
